@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Fix wrong forbidden access to /dicom-web/studies/../series for users who 
+  had "authorized_labels"=="*"
 
 2024-03-25 - v 0.7.1
 ====================
